# focus-keeper

./: GITEE_SETUP.md  GITHUB_SETUP.md  README_CN.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.gitee/: go.yml
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/blocker/: hosts.rs  mod.rs  process.rs
src-tauri/src/commands/: focus.rs  hosts.rs  lock.rs  mod.rs  process.rs  stats.rs
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  switch.tsx  tabs.tsx
src/pages/: AppBlocker.tsx  FocusMode.tsx  PasswordManager.tsx  Statistics.tsx  WebsiteBlocker.tsx
