[package]
name = "focus-keeper"
version = "0.1.0"
description = "Focus Keeper - 不做手机控 Windows 桌面应用"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0-rc.17", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"
sysinfo = "0.30"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
thiserror = "1.0"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
